add some javascript

--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
             </ul>
         </header>
         <main>
-            <section class="card card__work">
-                <!-- <div class="position__img">
-                    <img class="img__card" src="./assets/icon-work.svg" alt="Image Work">
-                </div> -->
+            <!-- <section class="card card__work">
                 <div class="container__card">
                     <article class="first-row">
                         <h2 class="card__name">Work</h2>
@@ -49,8 +46,8 @@
                         <p class="card__lastWeek">Last Week - 36hrs</p>
                     </article>
                 </div>
-            </section>
-        </main>
-        
+            </section> -->
+        </main> 
+        <script type="module" src="./index.js"></script>
     </body>
 </html>
