--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     </article>
                 </div>
             </section> -->
-        </main> 
-        <script type="module" src="./index.js"></script>
+        </main>
+
+        <script type="text/javascript" src="./index.js"></script>
     </body>
 </html>
