--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <body>
         <header>
             <section class="header__user">
-                <div class="container__img">
-                    <img class="img__user" src="https://github.com/henzorafael.png" alt="">
-                </div>
+                <a href="https://github.com/henzorafael" target="_blank">
+                    <div class="container__img">
+                        <img class="img__user" src="https://github.com/henzorafael.png" alt="">
+                    </div>
+                </a>
                 <div class="container__user">
                     <p class="report__user">Report for</p>
                     <h2 class="name__user">Henzo Rafael</h2>
@@ -26,7 +28,7 @@
                 <li class="filter__item filter__daily">
                     Daily
                 </li>
-                <li class="filter__item filter__weekly">
+                <li class="filter__item filter__weekly filter__selected">
                     Weekly
                 </li>
                 <li class="filter__item filter__monthly">
