--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
             </section> -->
         </main>
 
-        <script type="text/javascript" src="./index.js"></script>
+        <script type="text/javascript" src="./main.js"></script>
     </body>
 </html>
